--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -8,3 +8,5 @@ commands:
     usage: /givebrush (nazwa)
   clear:
     aliases: [ci,clean,clearinvent,clearinventory]
+  brushreload:
+    permission: brush.reload
